# scope_yolo_mask

./: .gitignore  README.md  pyproject.toml  test_pipeline.py
src/scope_yolo_mask/: __init__.py  pipeline.py  plugin.py  schema.py
